// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the (Activity) EntryDetails component does not render the delete button on the first element 1`] = `
<div
  className="activity--body activity--body__first"
  id="activity-activity 1 key"
>
  <Review
    className="entry-details--review"
    editContent={
      <div
        className="nowrap visibility--screen"
      >
        <Button
          component="button"
          onClick={[Function]}
          size="small"
          type="button"
          variation="transparent"
        >
          Edit
        </Button>
      </div>
    }
    editText="Edit"
    heading="Activity 1: activity 1 name (money pit)"
    headingLevel={4}
  />
</div>
`;

exports[`the (Activity) EntryDetails component navigates to activities 1`] = `
<div
  className="activity--body activity--body__notfirst"
  id="activity-activity key"
>
  <Review
    className="entry-details--review"
    editContent={
      <div
        className="nowrap visibility--screen"
      >
        <Button
          component="button"
          onClick={[Function]}
          size="small"
          type="button"
          variation="transparent"
        >
          Edit
        </Button>
        <React.Fragment>
          <span>
            |
          </span>
          <Button
            className="ds-u-color--error"
            component="button"
            onClick={[Function]}
            size="small"
            type="button"
            variation="transparent"
          >
            Delete
          </Button>
        </React.Fragment>
      </div>
    }
    editText="Edit"
    heading="Activity 3: activity name (money pit)"
    headingLevel={4}
  />
</div>
`;

exports[`the (Activity) EntryDetails component renders correctly with no activity funding source/program 1`] = `
<div
  className="activity--body activity--body__notfirst"
  id="activity-activity key"
>
  <Review
    className="entry-details--review"
    editContent={
      <div
        className="nowrap visibility--screen"
      >
        <Button
          component="button"
          onClick={[Function]}
          size="small"
          type="button"
          variation="transparent"
        >
          Edit
        </Button>
        <React.Fragment>
          <span>
            |
          </span>
          <Button
            className="ds-u-color--error"
            component="button"
            onClick={[Function]}
            size="small"
            type="button"
            variation="transparent"
          >
            Delete
          </Button>
        </React.Fragment>
      </div>
    }
    editText="Edit"
    heading="Activity 3: activity name"
    headingLevel={4}
  />
</div>
`;

exports[`the (Activity) EntryDetails component renders correctly with no activity name 1`] = `
<div
  className="activity--body activity--body__notfirst"
  id="activity-activity key"
>
  <Review
    className="entry-details--review"
    editContent={
      <div
        className="nowrap visibility--screen"
      >
        <Button
          component="button"
          onClick={[Function]}
          size="small"
          type="button"
          variation="transparent"
        >
          Edit
        </Button>
        <React.Fragment>
          <span>
            |
          </span>
          <Button
            className="ds-u-color--error"
            component="button"
            onClick={[Function]}
            size="small"
            type="button"
            variation="transparent"
          >
            Delete
          </Button>
        </React.Fragment>
      </div>
    }
    editText="Edit"
    heading="Activity 3: Untitled (money pit)"
    headingLevel={4}
  />
</div>
`;

exports[`the (Activity) EntryDetails component renders correctly with no activity name or funding source/program 1`] = `
<div
  className="activity--body activity--body__notfirst"
  id="activity-activity key"
>
  <Review
    className="entry-details--review"
    editContent={
      <div
        className="nowrap visibility--screen"
      >
        <Button
          component="button"
          onClick={[Function]}
          size="small"
          type="button"
          variation="transparent"
        >
          Edit
        </Button>
        <React.Fragment>
          <span>
            |
          </span>
          <Button
            className="ds-u-color--error"
            component="button"
            onClick={[Function]}
            size="small"
            type="button"
            variation="transparent"
          >
            Delete
          </Button>
        </React.Fragment>
      </div>
    }
    editText="Edit"
    heading="Activity 3: Untitled"
    headingLevel={4}
  />
</div>
`;
